Update style.css to fix the horizontal scrolling

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,15 @@
 html {
     height: 100%;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 
 body {
+    width:100vw;
+    margin:0;
+    padding:0;
     color: #555;
     font-family: 'Lato';
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 
 /* from Bulma */
